Estilo inicial index.html
Se le enlaza una hoja de estilos al archivo index para proceder a darle al fondo un color más amigable con la vista y se ajustaron los colores de otros elementos para que combinaran bien con el fondo

--- a/prueba1/CSS/estilo_index.css
+++ b/prueba1/CSS/estilo_index.css
@@ -1,6 +1,23 @@
+h3{
+    color: white;
+}
 body{
+    
     background-color: black;
 }
 
+footer{
+    background-color: blue;
+}
 
-<link rel="stylesheet" href="CSS/estilo_index.css" type="text/css" media="all">
+h1{
+    color:white;
+}
+
+p{
+    color: white;
+}
+
+h2{
+    color:white;
+}
