--- a/prueba1/CSS/estilo_index.css
+++ b/prueba1/CSS/estilo_index.css
@@ -1,23 +1,17 @@
-h3{
-    color: white;
-}
-body{
+.pContenido{
+
+
     
-    background-color: black;
 }
 
-footer{
-    background-color: blue;
+.pContenido2{
+
+
+
 }
 
-h1{
-    color:white;
-}
+.cMinas{
 
-p{
-    color: white;
-}
 
-h2{
-    color:white;
+
 }
