Posicionamiento de footer y funciones adicionales
Se empieza a configurar la pagina de registro, acomodando la barra de navegacion, los campos del formulario y el footer, que despues de una odisea se logró posicionar en la parte de abajo sin que se quitara lo responsivo :v

--- a/taller2/CSS/estilosindex.css
+++ b/taller2/CSS/estilosindex.css
@@ -24,8 +24,8 @@ div.row{
 
 .iconos{
 
-    max-width: 130px;
-    max-height: 130px;
-    padding-left: 30px;
+    max-width: 60px;
+    max-height: 60px;
+    /*padding-left: 30px; */
 
 }
