--- a/taller2/CSS/estilosindex.css
+++ b/taller2/CSS/estilosindex.css
@@ -5,8 +5,8 @@
 }
 .imgresponsive1{
 
-    max-width: 910px;
-    max-height: 400px;
+    max-width: 900px;
+    max-height: 500px;
 
 }
 
@@ -27,5 +27,12 @@ div.row{
     max-width: 60px;
     max-height: 60px;
     /*padding-left: 30px; */
+
+}
+footer{
+    
+    padding-top:150px;
+    max-width: 100%;
+
 
 }
