--- a/taller2/CSS/estilosregistro.css
+++ b/taller2/CSS/estilosregistro.css
@@ -4,6 +4,7 @@
     max-height: 60px;
 
 }
+
 body{
     background-color: antiquewhite;
     max-width: 100%;
@@ -11,14 +12,14 @@ body{
 .navbar-bg-morado{
 
     background-color: #CE3535;
-
+    border: 0;
 }
 
 footer{
     
-    position:absolute;
-    width: auto;
-    bottom: 0;
+    padding-top:150px;
+    max-width: 100%;
+
 
 }
 
@@ -28,3 +29,9 @@ div.row{
     margin-left: 0;
 
 }
+
+.clearfloatxd{
+    clear:both;
+}
+
+
